@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.2 2002/09/30 22:18:55 jlam Exp $
+@comment $NetBSD: PLIST,v 1.3 2002/11/09 15:24:25 is Exp $
 pvm3/bin/${PVM_ARCH}/dbwtest
 pvm3/bin/${PVM_ARCH}/fgexample
 pvm3/bin/${PVM_ARCH}/fmaster1
@@ -114,6 +114,7 @@ pvm3/lib/kshrc.stub
 pvm3/lib/pvm
 pvm3/lib/pvm.bat
 pvm3/lib/pvm.cmd
+pvm3/lib/pvm.cygwin.bat
 pvm3/lib/pvmd
 pvm3/lib/pvmd.bat
 pvm3/lib/pvmd.cmd
